devel
-----

* fixed Foxx complaining about valid `$schema` value in manifest.json

* Foxx `req.makeAbsolute` now will return meaningful values when ArangoDB is using
  a unix socket endpoint. URLs generated when using a unix socket follow the format
  http://unix:<socket-path>:<url-path> used by other JS tooling.

* Updated joi library (Web UI), improved foxx mount path validation

* fix for supervision, which started failing servers using old transient store

* do not create `_routing` collection for new installations/new databases, 
  as it is not needed anymore. Redirects to the web interface's login screen, which 
  were previously handled by entries in the `_routing` collection are now handled
  from the responsible REST action handler directly

  Existing `_routing` collections will not be touched as they may contain other
  entries as well, and will continue to work.

* do not create `_modules` collection for new databases/installations

  `_modules` is only needed for custom modules, and in case a custom
  module is defined via `defineModule`, the _modules collection will
  be created lazily automatically.

  Existing modules in existing `_modules` collections will remain
  functional even after this change

* fixed Foxx queues not retrying jobs with infinite `maxFailures`

* force connection timeout to be 7 seconds to allow libcurl time to retry lost DNS
  queries.

* fixes a routing issue within the web ui after the use of views

* fixes some graph data parsing issues in the ui, e.g. cleaning up duplicate
  edges inside the graph viewer.

* in a cluster environment, the arangod process now exits if wrong credentials
  are used during the startup process

* fixes validation of allowed or not allowed foxx service mount paths within
  the Web UI

* fixed handling of broken Foxx services

  Installation now also fails when the service encounters an error when
  executed. Upgrading or replacing with a broken service will still result