@@ -53,13 +53,17 @@ struct HealthRecord {
   std::string advertisedEndpoint;
   std::string lastAcked;
   std::string hostId;
+  std::string serverVersion;
+  std::string engine;
   size_t version;
 
   explicit HealthRecord() : version(0) {}
 
   HealthRecord(
-    std::string const& sn, std::string const& ep, std::string const& ho) :
-    shortName(sn), endpoint(ep), hostId(ho), version(0) {}
+    std::string const& sn, std::string const& ep, std::string const& ho,
+    std::string const& en, std::string const& sv) :
+    shortName(sn), endpoint(ep), hostId(ho), serverVersion(sv),
+    engine(en), version(0) {}
 
   explicit HealthRecord(Node const& node) {
     *this = node;
@@ -94,6 +98,12 @@ struct HealthRecord {
         if (node.has("AdvertisedEndpoint")) {
           version = 3;
           advertisedEndpoint = node.hasAsString("AdvertisedEndpoint").first;
+
+          if (node.has("Engine") && node.has("Version")) {
+            version = 4;
+            engine = node.hasAsString("Engine").first;
+            serverVersion = node.hasAsString("Version").first;
+          }
         }
       } else if (node.has("LastHeartbeatStatus")) {
         version = 1;
@@ -116,6 +126,8 @@ struct HealthRecord {
     advertisedEndpoint = other.advertisedEndpoint;
     endpoint = other.endpoint;
     hostId = other.hostId;
+    engine = other.engine;
+    serverVersion = other.serverVersion;
     version = other.version;
     return *this;
   }
@@ -128,6 +140,8 @@ struct HealthRecord {
     obj.add("Host", VPackValue(hostId));
     obj.add("SyncStatus", VPackValue(syncStatus));
     obj.add("Status", VPackValue(status));
+    obj.add("Version", VPackValue(serverVersion));
+    obj.add("Engine", VPackValue(engine));
     if (syncTime.empty()) {
       obj.add("Timestamp",
               VPackValue(timepointToString(std::chrono::system_clock::now())));
@@ -443,18 +457,31 @@ std::vector<check_t> Supervision::check(std::string const& type) {
 
       shortName = tmp_shortName.first;
 
-      // "/arango/Current/<serverId>/endpoint"
+      // "/arango/Current/ServersRegistered/<server-id>/endpoint"
       std::string endpoint;
       std::string epPath = serverID + "/endpoint";
       if (serversRegistered.has(epPath)) {
         endpoint = serversRegistered.hasAsString(epPath).first;
       }
-      // "/arango/Current/<serverId>/host"
+      // "/arango/Current/ServersRegistered/<server-id>/host"
       std::string hostId;
       std::string hoPath = serverID + "/host";
       if (serversRegistered.has(hoPath)) {
         hostId = serversRegistered.hasAsString(hoPath).first;
       }
+      // "/arango/Current/ServersRegistered/<server-id>/serverVersion"
+      std::string serverVersion;
+      std::string svPath = serverID + "/versionString";
+      if (serversRegistered.has(svPath)) {
+        serverVersion = serversRegistered.hasAsString(svPath).first;
+      }
+      // "/arango/Current/ServersRegistered/<server-id>/engine"
+      std::string engine;
+      std::string enPath = serverID + "/engine";
+      if (serversRegistered.has(enPath)) {
+        engine = serversRegistered.hasAsString(enPath).first;
+      }
+
 
       // "/arango/Current/<serverId>/externalEndpoint"
       /*std::string externalEndpoint;
@@ -464,8 +491,8 @@ std::vector<check_t> Supervision::check(std::string const& type) {
       }*/
 
       // Health records from persistence, from transience and a new one
-      HealthRecord transist(shortName, endpoint, hostId);
-      HealthRecord persist(shortName, endpoint, hostId);
+      HealthRecord transist(shortName, endpoint, hostId, engine, serverVersion);
+      HealthRecord persist(shortName, endpoint, hostId, engine, serverVersion);
 
       // Get last health entries from transient and persistent key value stores
       if (_transient.has(healthPrefix + serverID)) {
@@ -1021,7 +1048,7 @@ void Supervision::workJobs() {
 
 void Supervision::readyOrphanedIndexCreations() {
   _lock.assertLockedByCurrentThread();
-  
+
   if (_snapshot.has(planColPrefix) && _snapshot.has(curColPrefix)) {
     auto const& plannedDBs = _snapshot(planColPrefix).children();
     auto const& currentDBs = _snapshot(curColPrefix);
@@ -1053,7 +1080,7 @@ void Supervision::readyOrphanedIndexCreations() {
                   for (auto const& sh : shards.children()) {
 
                     auto const& shname = sh.first;
-                  
+
                     if (currentDBs.has(colPath + shname + "/indexes")) {
                       auto const& curIndexes =
                         currentDBs(colPath + shname + "/indexes").slice();
@@ -1107,7 +1134,7 @@ void Supervision::readyOrphanedIndexCreations() {
               { VPackObjectBuilder precondition(envelope.get());
                 envelope->add(
                   VPackValue(
-                    _agencyPrefix + planColPrefix + colPath + "indexes")); 
+                    _agencyPrefix + planColPrefix + colPath + "indexes"));
                 envelope->add(indexes); }
             }}
 
@@ -1116,7 +1143,7 @@ void Supervision::readyOrphanedIndexCreations() {
             LOG_TOPIC(DEBUG, Logger::SUPERVISION)
               << "failed to report ready index to agency. Will retry.";
           }
-        }          
+        }
       }
     }
   }
