@@ -484,16 +484,16 @@ static constexpr char const* currentServersRegisteredPref = "/Current/ServersReg
 /// @brief check equality of engines with other registered servers
 bool ServerState::checkEngineEquality(AgencyComm& comm) {
   std::string engineName = EngineSelectorFeature::engineName();
-  
+
   AgencyCommResult result = comm.getValues(currentServersRegisteredPref);
   if (result.successful()) { // no error if we cannot reach agency directly
-    
+
     auto slicePath = AgencyCommManager::slicePath(currentServersRegisteredPref);
     VPackSlice servers = result.slice()[0].get(slicePath);
     if (!servers.isObject()) {
       return true; // do not do anything harsh here
     }
-    
+
     for (VPackObjectIterator::ObjectPair pair : VPackObjectIterator(servers)) {
       if (pair.value.isObject()) {
         VPackSlice engineStr = pair.value.get("engine");
@@ -503,7 +503,7 @@ bool ServerState::checkEngineEquality(AgencyComm& comm) {
       }
     }
   }
-  
+
   return true;
 }
 
@@ -645,7 +645,7 @@ bool ServerState::registerAtAgencyPhase1(AgencyComm& comm,
 
 bool ServerState::registerAtAgencyPhase2(AgencyComm& comm) {
   TRI_ASSERT(!_id.empty() && !_myEndpoint.empty());
-  
+
   while (!application_features::ApplicationServer::isStopping()) {
     VPackBuilder builder;
     try {
@@ -654,14 +654,15 @@ bool ServerState::registerAtAgencyPhase2(AgencyComm& comm) {
       builder.add("advertisedEndpoint", VPackValue(_advertisedEndpoint));
       builder.add("host", VPackValue(getHost()));
       builder.add("version", VPackValue(rest::Version::getNumericServerVersion()));
+      builder.add("versionString", VPackValue(rest::Version::getServerVersion()));
       builder.add("engine", VPackValue(EngineSelectorFeature::engineName()));
     } catch (...) {
       LOG_TOPIC(FATAL, arangodb::Logger::CLUSTER) << "out of memory";
       FATAL_ERROR_EXIT();
     }
-    
+
     auto result = comm.setValue(currentServersRegisteredPref + _id, builder.slice(), 0.0);
-    
+
     if (result.successful()) {
       return true;
     } else {
@@ -669,10 +670,10 @@ bool ServerState::registerAtAgencyPhase2(AgencyComm& comm) {
       << "failed to register server in agency: http code: "
       << result.httpCode() << ", body: '" << result.body() << "', retrying ...";
     }
-    
+
     std::this_thread::sleep_for(std::chrono::seconds(1));
   }
-  
+
   return false;
 }
 
